<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trile.foodlocation.BusinessRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_mail_business"
                    android:drawableLeft="@drawable/ic_text_mail"
                    android:singleLine="true"
                    android:hint="@string/hint_mail"
                    style="@style/edt_custom"/>

                <EditText
                    android:id="@+id/edt_pass_business"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_text_pass"
                    android:singleLine="true"
                    android:hint="@string/hint_pass"
                    style="@style/edt_custom"/>

                <EditText
                    android:id="@+id/edt_business_name"
                    android:drawableLeft="@drawable/ic_text_infors"
                    android:singleLine="true"
                    android:hint="@string/hint_pass_business_name"
                    style="@style/edt_custom"/>

                <EditText
                    android:id="@+id/edt_business_phone"
                    android:inputType="number"
                    android:drawableLeft="@drawable/ic_text_phone"
                    android:singleLine="true"
                    android:hint="@string/hint_pass_business_phone"
                    style="@style/edt_custom"/>

                <EditText
                    android:id="@+id/edt_time"
                    android:drawableLeft="@drawable/ic_text_time"
                    android:hint="@string/hint_time"
                    android:singleLine="true"
                    style="@style/edt_custom"/>

                <EditText
                    android:id="@+id/edt_address"
                    android:drawableLeft="@drawable/ic_text_address"
                    android:hint="Địa chỉ kinh doanh"
                    android:singleLine="true"
                    style="@style/edt_custom"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbxFood"
                        style="@style/business_type_checkbox"
                        android:text="@string/business_type_food"/>
                    <CheckBox
                        android:id="@+id/cbxDrink"
                        style="@style/business_type_checkbox"
                        android:text="@string/business_type_drink"/>
                    <CheckBox
                        android:id="@+id/cbxPubbb"
                        style="@style/business_type_checkbox"
                        android:text="@string/business_type_pub"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_register_business"
                    android:text="@string/button_register"
                    style="@style/btn_custom"
                    android:layout_marginBottom="20dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
