<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.trile.foodlocation.NormalRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_mail_login"
            android:drawableLeft="@drawable/ic_mail"
            android:singleLine="true"
            android:hint="@string/hint_mail"
            style="@style/edt_custom"/>

        <EditText
            android:id="@+id/edt_pass_login"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_pass"
            android:hint="@string/hint_pass"
            style="@style/edt_custom"/>

        <Button
            android:id="@+id/btn_register"
            android:text="@string/button_register"
            style="@style/btn_custom"/>

    </LinearLayout>

</FrameLayout>
