<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context="com.example.trile.foodlocation.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center|left"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/update_infor"
                android:drawablePadding="10dp"
                android:text="@string/title_add_product"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCloseAddProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/function_close"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_choosen"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/image"/>

                <EditText
                    android:drawableLeft="@drawable/ic_text_name"
                    android:hint="@string/hint_product"
                    android:singleLine="true"
                    style="@style/edt_custom"/>

                <EditText
                    android:drawableLeft="@drawable/ic_text_money"
                    android:hint="@string/hint_price"
                    android:singleLine="true"
                    style="@style/edt_custom"/>

                <EditText
                    android:drawableLeft="@drawable/ic_text_desciption"
                    android:hint="@string/hint_desciption"
                    android:singleLine="true"
                    style="@style/edt_custom"/>

                <Button
                    android:text="@string/btn_accept_add"
                    style="@style/btn_custom"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/tv_address"
                    android:text="@string/NOTE"
                    android:textSize="14dp"
                    android:layout_margin="12dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
