<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/click_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_no_login"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/button_login"
                android:textColor="@color/click_user"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/custom_edt_white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/click_user"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/function_close"
                android:background="@drawable/custom_edt_white"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>