<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/function_choosen_title"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right">

                <TextView
                    android:id="@+id/tvCloseChoosenImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/function_choosen_close"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearOpenCamera"
            android:layout_marginBottom="0dp"
            style="@style/linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_camera"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/choosen_img_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearOpenLibrary"
            android:layout_marginBottom="0dp"
            style="@style/linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_library"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/choosen_img_library"/>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>