<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.trile.foodlocation.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_mail_login"
                android:drawableLeft="@drawable/ic_mail"
                android:singleLine="true"
                android:hint="@string/hint_mail"
                style="@style/edt_custom"/>

            <EditText
                android:id="@+id/edt_pass_login"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pass"
                android:singleLine="true"
                android:hint="@string/hint_pass"
                style="@style/edt_custom"/>

            <Button
                android:id="@+id/btn_login"
                android:text="@string/button_login"
                style="@style/btn_custom"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.2">

            <TextView
                android:id="@+id/next_no_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trang chủ"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
